// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it can extend and override the default config 1`] = `
Object {
  "content": Array [
    "app/**/*.php",
    "resources/**/*.html",
    "resources/**/*.js",
    "resources/**/*.jsx",
    "resources/**/*.ts",
    "resources/**/*.tsx",
    "resources/**/*.php",
    "resources/**/*.vue",
    "resources/**/*.twig",
    "vendor/spatie/menu/**/*.php",
  ],
  "defaultExtractor": [Function],
  "whitelistPatterns": Array [],
}
`;

exports[`it can extend the default config 1`] = `
Object {
  "content": Array [
    "app/**/*.php",
    "resources/**/*.html",
    "resources/**/*.js",
    "resources/**/*.jsx",
    "resources/**/*.ts",
    "resources/**/*.tsx",
    "resources/**/*.php",
    "resources/**/*.vue",
    "resources/**/*.twig",
    "vendor/spatie/menu/**/*.php",
  ],
  "defaultExtractor": [Function],
  "whitelistPatterns": Array [
    /-active\\$/,
    /-enter\\$/,
    /-leave-to\\$/,
  ],
}
`;

exports[`it can override the default config 1`] = `
Object {
  "content": Array [
    "resource/js/**/*.js",
  ],
  "defaultExtractor": [Function],
  "whitelistPatterns": Array [
    /-active\\$/,
    /-enter\\$/,
    /-leave-to\\$/,
  ],
}
`;

exports[`it can pass through the default config 1`] = `
Object {
  "content": Array [
    "app/**/*.php",
    "resources/**/*.html",
    "resources/**/*.js",
    "resources/**/*.jsx",
    "resources/**/*.ts",
    "resources/**/*.tsx",
    "resources/**/*.php",
    "resources/**/*.vue",
    "resources/**/*.twig",
  ],
  "defaultExtractor": [Function],
  "whitelistPatterns": Array [
    /-active\\$/,
    /-enter\\$/,
    /-leave-to\\$/,
  ],
}
`;
